Fix partial path traversal in UI ResourceServlet
The containment check compared canonical paths as string prefixes, so a
sibling directory sharing the configured directory's name prefix (e.g.
ui/admin/default-old next to ui/admin/default) was reachable via "..".
Resolve requests with java.nio.file.Path and check containment on path
components, resolving symlinks on both sides. Serve files through
Files/Path instead of file: URLs.

Resolves CodeQL alerts #2, #3, #8, #9 (java/partial-path-traversal) and
#5, #6, #7 (java/ssrf) in openidm-servlet.